<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Domicilios WIL</string>

    <!-- Panel Domiciliario -->
    <string name="cd_avatar">Avatar</string>
    <string name="default_domi_name">Domiciliario</string>
    <string name="default_counter">0</string>
    <string name="panel_domi_subtitle">Panel Domiciliario</string>
    <string name="cd_actualizar">Actualizar</string>
    <string name="cd_tracker_gps">Rastreador GPS</string>
</resources>